--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
-    "gridsome": "^0.7.0"
+    "gridsome": "^0.7.0",
+    "vue-google-autocomplete": "^1.1.0"
   }
 }
